fix: Change targetValue from String to BigDecimal and improve error handling